<resources>
    <string name="app_name">My Application</string>
    <string name="afazeres"><![CDATA[Afazeres >]]></string>
    <string name="favoritos">Favoritos</string>
    <string name="menu">TODO</string>
    <string name="todas"><![CDATA[Todas >]]></string>
    <string name="completos"><![CDATA[Completos >]]></string>
    <string name="logo">logo</string>
    <string name="minhas_listas">Minhas Listas</string>
    <string name="compras">Compras</string>
    <string name="filmes">Filmes para assistir</string>
    <string name="ir_ao_mercado">Ir ao mercado</string>
    <string name="dia_20_de_maio_de_2022">Dia 20 de Maio de 2022</string>
    <string name="treinar_guitarra">Treinar guitarra</string>
    <string name="estudar_para_prova">Estudar para prova</string>
    <string name="voltar"><![CDATA[<]]></string>
    <string name="limpar_a_casa">Limpar a casa</string>
    <string name="passear_com_o_cachorro">Passear com o cachorro</string>
    <string name="ler_o_livro">Ler o livro</string>
    <string name="afazeresdois">Afazeres</string>
    <string name="completosdois">Completos</string>
    <string name="todasdois">Todas</string>
    <string name="duas_caixas_de_ovo">Duas caixas de ovo</string>
    <string name="leite_condensado">Leite condensado</string>
    <string name="chocolate_em_p">Chocolate em pó</string>
    <string name="lixo" />
    <string name="de_repente_30">De repente 30</string>
    <string name="ilha_do_medo">Ilha do medo</string>
    <string name="crepusculo">Crepúsculo</string>
    <string name="projeto_x">Projeto X</string>
    <string name="ir_ao_shopping">Ir ao shopping</string>
    <string name="come_ar_novo_hobbie">Começar novo hobbie</string>
    <string name="viajar">Viajar</string>
    <string name="programacao_de_ferias">Programação de férias</string>
    <string name="praticar_esportes">Praticar esportes</string>
    <string name="comprasdois">Compras</string>
    <string name="programacao_de_feriasdois">Programação de férias</string>
    <string name="filmesdois">Filmes para assistir</string>
    <string name="mapa">Mapa</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="cidade">Cidade</string>
    <string name="estado">Estado</string>
    <string name="pais">Pais</string>
    <string name="bussola">bussola</string>
</resources>